# pybind11

.github/workflows/: ci.yml  format.yml  pip.yml
example/: CMakeLists.txt  example.cpp
include/pybind11/: cast.h  eigen.h  numpy.h  pybind11.h  pytypes.h  stl.h  stl_bind.h  typing.h
include/pybind11/detail/: common.h  internals.h  type_caster_base.h
tests/: test_pytypes.cpp  test_pytypes.py  test_stl.py  test_stl_binders.py
tools/: pybind11Config.cmake.in
